[package]
name = "numbers_to_letters2"
version = "0.1.0"
authors = ["Johao Perlaza <perlazajohao@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nickel = "0.11.0"
serde = "1.0.123"
serde_derive = "1.0.123"